# DMD

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  GUIDA.md  PROGRESS.md  README.md
.github/workflows/: build.yml
.opencode/skills/dmd-code-style/: SKILL.md
.opencode/skills/dmd-workflow/: SKILL.md
design/: architettura.mmd  force_engine.md
docs/: GUIDA.md  GUIDE.md  components.md  containers.md  context.md  graph.mmd  user_guide.md
docs/adr/: 0001-use-pybind11-for-python-bindings.md  0002-use-pme-for-electrostatics.md  0003-replace-binary-dmdin-with-json.md  0004-use-shake-for-water.md
python/: CMakeLists.txt  pyproject.toml
python/dmd/: __init__.py  checkpoint.py  config.py  core.cpp  minimizer.py  runner.py  status.py  system.py
python/dmd/convert/: __init__.py  gro.py  pdb.py  psf.py
python/dmd/forcefield/: __init__.py  base.py  charmm.py  merger.py  registry.py
src/: CMakeLists.txt
src/barostat/: CMakeLists.txt  andersen_barostat.cpp  andersen_barostat.h  barostat.cpp  barostat.h  berendsen_barostat.cpp  berendsen_barostat.h
src/core/: CMakeLists.txt  cell.cpp  cell.h  constants.h  error.cpp  error.h  system_data.cpp  system_data.h
src/force/: CMakeLists.txt  coulomb_direct.cpp  coulomb_direct.h  coulomb_exclusion.cpp  coulomb_exclusion.h  coulomb_pme.cpp  coulomb_pme.h  force_component.cpp  force_component.h  force_engine.cpp  force_engine.h  harmonic_angle.cpp  harmonic_angle.h  harmonic_bond.cpp  harmonic_bond.h  harmonic_improper.cpp  harmonic_improper.h  lennard_jones.cpp  lennard_jones.h  periodic_dihedral.cpp  periodic_dihedral.h
src/integrate/: CMakeLists.txt  constraints.cpp  constraints.h  integrator.cpp  integrator.h
src/main/: CMakeLists.txt  main.cpp
src/sim/: CMakeLists.txt  checkpoint.cpp  checkpoint.h  json_config.cpp  json_config.h  simulation_config.h  simulation_engine.cpp  simulation_engine.h
src/sysbin/: CMakeLists.txt  dmdin.cpp  dmdin.h
src/thermostat/: CMakeLists.txt  andersen.cpp  andersen.h  berendsen.cpp  berendsen.h  nose_hoover.cpp  nose_hoover.h  thermostat.cpp  thermostat.h
src/trajectory/: CMakeLists.txt  h5md_writer.cpp  h5md_writer.h
tests/integration/: CMakeLists.txt  test_argon_nve.cpp  test_checkpoint_restart.cpp  test_npt_berendsen.cpp  test_production.cpp
tests/unit/: CMakeLists.txt
tests/unit/barostat/: CMakeLists.txt  test_barostat.cpp
tests/unit/core/: CMakeLists.txt  test_cell.cpp  test_system_data.cpp
tests/unit/force/: CMakeLists.txt  test_coulomb.cpp  test_coulomb_pme.cpp  test_force_engine.cpp  test_harmonic_angle.cpp  test_harmonic_bond.cpp  test_harmonic_improper.cpp  test_lennard_jones.cpp  test_periodic_dihedral.cpp
tests/unit/integrate/: CMakeLists.txt  test_constraints.cpp  test_integrator.cpp
tests/unit/sim/: CMakeLists.txt  test_simulation_engine.cpp
tests/unit/sysbin/: CMakeLists.txt  test_dmdin.cpp
tests/unit/thermostat/: CMakeLists.txt  test_thermostat.cpp
tests/unit/trajectory/: CMakeLists.txt  test_h5md_writer.cpp
tests/validation/: test_boltzmann.py  test_bonded_pipeline.py  test_equipartition.py  test_nve_drift.py  test_water_properties.py
