[build-system]
requires = ["setuptools>=68.0", "wheel", "pybind11>=2.13.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dmd"
version = "0.1.0"
description = "Discrete Molecular Dynamics engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools]
packages = ["dmd"]
package-dir = {"dmd" = "."}
